--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -64,6 +64,26 @@
             display: inline-block;
             vertical-align: middle;margin-right:5px;
         }
+        footer {
+            text-align: center;
+            padding: 3px;
+            background-color: #111;
+            color: white;
+            bottom: 0rem;
+            position: relative;
+            width: 100%;
+            opacity: calc();
+        }
+        img.hover-shadow {
+            transition: 0.3s;
+        }
+        
+        .hover-shadow:hover {
+            box-shadow: 0 4px 8px 0 rgba(243, 238, 238, 0.2), 0 6px 20px 0 rgba(231, 221, 221, 0.19);
+        }
+        .img-responsive{
+            margin:0 auto;
+        }
     </style>
 </head>
 
@@ -86,70 +106,39 @@
         </div>
     </div>
 
+    <h3 style="text-align: center;">LEAGUE STORE - FASHION X FOOTBALL</h3>
+    <h3 style="text-align: center;">THỜI TRANG THỂ THAO HÀNG ĐẦU VIỆT NAM</h3>
+    <div class="container">
+        <p style="text-align: center;">
+ 
+            <strong>LEAGUE STORE</strong> là thương hiệu thời trang mang đến cho khách hàng các xu hướng hiện đại trong và ngoài nước nhanh nhất,
+            mới nhất và độc nhất với mục tiêu mang lại giá trị thật tương xứng với chất lượng tốt nhất cho khách hàng trên từng sản phẩm. 
+        </p>
+        <br>
+        <p style="text-align: center;">
+            Với triết lý kinh doanh “KHÁCH HÀNG LÀ SỐ 1” <strong>LEAGUE STORE</strong> mong muốn mang lại sự trải nghiệm tuyệt vời nhất và những lựa chọn 
+            hoàn hảo dành cho khách hàng trong quá trình mua sắm tại SHOP.
+        </p>
+        <br>
+        <p style="text-align: center;">
+            Để làm được điều đó, <strong>LEAGUE STORE</strong> đã đặt ra những tiêu chuẩn về chất lượng trong quy trình lựa chọn sản phẩm và đào tạo dịch 
+            vụ trên nền tảng kiến thức, kinh nghiệm gặt hái được từ nhiều năm hoạt động trong ngành thời trang thể thao bán lẻ. 
+        </p>
+        <br>
+        <p style="text-align: center;">
+            <strong>LEAGUE STORE</strong> đã góp phần tạo nên một thị trường mang nhiều màu sắc rực rỡ mới và khác biệt, tiên phong trong lĩnh vực thời trang
+            kết hợp với trái bóng tròn tại Việt NAM.
+        </p>
+    </div>
+    
     <h3 style="text-align: center;">Hướng dẫn chỉ đường</h3>
     <div class="container">
         <!-- <iframe src="https://www.google.com/maps/embed?pb=21.0217269,105.7914069/20.9932004,105.8485231/@21.0064702,105.7835865,13z/data=!3m1!4b1!4m4!4m3!1m1!4e1!1m0" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" id="map"></iframe> -->
         <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d29796.61087169622!2d105.8073626613405!3d21.009612367297017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d21.021726899999997!2d105.7914069!4m5!1s0x3135ac0e787fe273%3A0x7728f6e456c3a685!2zNjYgTmfDtSAxOTEgTWluaCBLaGFpLCBNaW5oIEtoYWksIEhhaSBCw6AgVHLGsG5nLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!3m2!1d20.9974445!2d105.8583999!5e0!3m2!1svi!2s!4v1639410988768!5m2!1svi!2s"
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
-    <h3 style="text-align: center;">Về chúng tôi</h3>
     <footer>
-        <div class="container">
-            <!--three js representation-->
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <a href="sendemail">
-                            <img class="hover-shadow cursor" src="/icon/email.png" alt="Card image cap">
-                        </a>
-                        <div class="card-body">
-                            <h5 class="card-title">Thư điện tử</h5>
-                            <p class="card-text">Contact with us via Email</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="card">
-                        <a href="">
-                            <img class="hover-shadow cursor" src="/icon/telephone.png" alt="Card image cap">
-                        </a>
-                        <div class="card-body">
-                            <h5 class="card-title">Điện thoại</h5>
-                            <p class="card-text">Phone num: (+84) 0862263986</p>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-6">
-                    <div class="card">
-                        <a href="https://www.facebook.com/LeagueStore77">
-                            <img class="hover-shadow cursor" src="/icon/facebook.png" alt="Card image cap">
-                        </a>
-
-                        <div class="card-body">
-                            <h5 class="card-title">FACEBOOK</h5>
-                            <p class="card-text">Contact with us via Facebook</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6">
-                    <div class="card">
-                        <a href="https://www.facebook.com/LeagueStore77">
-                            <img class="hover-shadow cursor" src="/icon/instagram.png" alt="Card image cap">
-                        </a>
-
-                        <div class="card-body">
-                            <h5 class="card-title">INSTAGRAM</h5>
-                            <p class="card-text">Contact with us via Instagram</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <p>Địa chỉ: số 66 ngõ 191 Minh Khai, Hai Bà Trưng, Hà Nội</p>
+        <%- include('footer')%>
     </footer>
 </body>
 
