--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -56,4 +56,4 @@
         </div>
     </div>
 </div>
-<p>Địa chỉ: số 66 ngõ 191 Minh Khai, Hai Bà Trưng, Hà Nội</p>
+<p>Địa chỉ: Số 3, ngách 369 Ngõ Quỳnh, Hai Bà Trưng, Hà Nội</p>
