--- a/views/news.ejs
+++ b/views/news.ejs
@@ -239,6 +239,26 @@
                 margin-left: 40%;
             }
         }
+        footer {
+            text-align: center;
+            padding: 3px;
+            background-color: #111;
+            color: white;
+            bottom: 0rem;
+            position: relative;
+            width: 100%;
+            opacity: calc();
+        }
+        img.hover-shadow {
+            transition: 0.3s;
+        }
+        
+        .hover-shadow:hover {
+            box-shadow: 0 4px 8px 0 rgba(243, 238, 238, 0.2), 0 6px 20px 0 rgba(231, 221, 221, 0.19);
+        }
+        .img-responsive{
+            margin:0 auto;
+        }
     </style>
   </head>
   <body>
@@ -281,5 +301,9 @@
       </div>
     </div>
     <h3>TẤT CẢ BÀI VIẾT</h3>
+
+    <footer>
+        <%- include('footer')%>
+    </footer>
   </body>
 </html>
