--- a/views/header.ejs
+++ b/views/header.ejs
@@ -257,7 +257,7 @@
                     </ul>
                 </li>
     
-                <li><a class="contact" href="/contact">LIÊN HỆ</a></li>
+                <li><a class="contact" href="/contact">GIỚI THIỆU</a></li>
     
                 <li><a class="news" href="/news">NEWS</a></li>
     
