--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -9,31 +9,10 @@
             <img src="/banner/bn1.jpg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn2.jpeg" style="width: 100%;">
+            <img src="/banner/bn2.jpg" style="width: 100%;">
         </div>
         <div class="item">
-            <img src="/banner/bn3.jpeg" style="width: 100%;">
-        </div>
-        <div class="item">
-            <img src="/banner/bn4.jpeg" style="width: 100%;">
-        </div>
-        <div class="item">
-            <img src="/banner/bn5.jpeg" style="width: 100%;">
-        </div>
-        <div class="item">
-            <img src="/banner/bn6.jpeg" style="width: 100%;">
-        </div>
-        <div class="item">
-            <img src="/banner/bn7.jpeg" style="width: 100%;">
-        </div>
-        <div class="item">
-            <img src="/banner/bn8.jpeg" style="width: 100%;">
-        </div>
-        <div class="item">
-            <img src="/banner/bn9.jpeg" style="width: 100%;">
-        </div>
-        <div class="item">
-            <img src="/banner/bn10.jpeg" style="width: 100%;">
+            <img src="/banner/bn3.png" style="width: 100%;">
         </div>
     </div>  
     <a class="left carousel-control" role="button" data-slide="prev">
