--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
                   <p>
-                    <a href="/">Trang chủ</a> / Liên hệ
+                    <a href="/">Trang chủ</a> / Giới thiệu
                   </p>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12 topbar-hotline">
