--- a/views/guide-policy/guide.bankaccount.ejs
+++ b/views/guide-policy/guide.bankaccount.ejs
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>League store 77</title>
+    <link rel="icon" href="/assets/logoweb.jpg">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>GUIDE BANK ACCOUNT PURCHASE</h1>
+    <h1>HƯỚNG DẪN THANH TOÁN QUA TÀI KHOẢN NGÂN HÀNG</h1>
   </body>
 </html>
