--- a/views/news.ejs
+++ b/views/news.ejs
@@ -282,7 +282,7 @@
           </div>
       </div>
     </div>
-    <%- include('header', {products: products}) %>
+    <%- include('header') %>
     <div id="topbar-down">
       <div class="container-fluid" style="margin-left: 20px;">
           <div class="row">
@@ -303,7 +303,7 @@
     <h3>TẤT CẢ BÀI VIẾT</h3>
 
     <footer>
-        <%- include('footer')%>
+        <%- include('footer'); %>
     </footer>
   </body>
 </html>
