--- a/views/index.ejs
+++ b/views/index.ejs
@@ -238,6 +238,202 @@
                 margin-left: 35%;
             }
         }
+        .sidenav {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: #FFF;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+        }
+
+        .sidenav a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .sidenav a:hover {
+            color: #f1f1f1;
+        }
+
+        .sidenav .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
+
+        @media screen and (max-width: 600px) {
+            .sidenav {padding-top: 15px;}
+            .sidenav a {font-size: 18px;}
+            .sidenav .form-inline.my-2.my-lg-0 .form-control.mr-sm-2{
+                width: 85%;
+            }
+            .sidenav .closebtn {
+                position: absolute;
+                top: 0;
+                right: 10px;
+                font-size: 36px;
+                margin-left: 25px;
+            }
+        }
+
+        .dropdown{
+            position: absolute;
+            display: inline-block;
+        }
+        .dropdown-right{
+            position: absolute;
+            display: inline-block;
+        }
+
+        .dropdown-menu a:hover {
+            background-color: #ddd;
+            color: coral;
+        }
+        .dropdown-menu-right a:hover {
+            background-color: #ddd;
+            color: coral;
+        }
+
+        .dropdown:hover .dropdown-menu {
+            display: block;
+        }
+        .dropdown-right:hover .dropdown-menu-right {
+            display: block;
+        }
+
+        .dropdown{
+            font-weight: bold;
+        }
+        .dropdown :hover{
+            color: coral;
+        }
+        .dropdown-right{
+            font-weight: bold;
+        }
+        .dropdown-right :hover{
+            color: coral;
+        }
+        .nav.navbar-nav {
+            font-weight: bold;
+            background: transparent;
+            transition: 0.5s;
+        }
+
+        .dropdown .dropdown-menu a:hover{
+            font-weight: bold;
+            color: coral;
+            text-decoration: underline;
+        }
+
+        .dropdown-right .dropdown-menu-right a:hover{
+            font-weight: bold;
+            color: coral;
+            text-decoration: underline;
+        }
+
+        .navbar-nav a{
+            font-weight: 350;
+            color: black;
+            font-size: 16px;
+            background: transparent;
+            transition: 0.5s;
+        }
+        .navbar-nav a:hover{
+            color: coral;
+            text-decoration: underline;
+            background-color: transparent;
+            background: transparent;
+        }
+
+        .dropdown a:hover{
+            color: coral;
+            text-decoration: underline;
+        }
+        .dropdown-right a:hover{
+            color: coral;
+            text-decoration: underline;
+        }
+
+        .navbar.navbar-dark.bg-dark a.icon{
+            display: none;
+        }
+
+        .navbar.navbar-dark.bg-dark a.icon:hover{
+            color: coral;
+        }
+
+        .navbar.navbar-dark.bg-dark > .container-fluid > .nav.navbar-nav > li > a, .dropdown:hover{
+            background: transparent;
+            background-color: transparent;
+        }
+
+        @media screen and (max-width: 600px) {
+            /* left menu */
+            .navbar.navbar-dark.bg-dark{
+                height: 5px;
+                transition: 0.5s;
+            }
+            .navbar.navbar-dark.bg-dark > .container-fluid > .nav.navbar-nav > li > a, .dropdown{
+                display: none;
+                transition: 0.5s;
+            }
+            .navbar.navbar-dark.bg-dark a.icon{
+                float: left;
+                display: block;
+                top: 10px;
+                left: 10px;
+                position: absolute;
+            }
+
+            .navbar.navbar-dark.bg-dark > .nav.navbar-nav.navbar-right > .login-item{
+                position: absolute;
+                top: 0;
+                float: right;
+                right: 75px;
+            }
+            .navbar.navbar-dark.bg-dark > .nav.navbar-nav.navbar-right > .cart-item{
+                position: absolute;
+                top: 0;
+                float: right;
+                right: 30px;
+            }
+            .navbar.navbar-dark.bg-dark > .nav.navbar-nav.navbar-right > a, .search-item{
+                position: absolute;
+                top: 0;
+                float: right;
+                right: 10px;
+            }
+        }
+
+        @media screen and (max-width: 600px){   
+            .navbar.navbar-dark.bg-dark.responsive {
+                position: relative;
+                height: 435px;
+                transition: 0.5s;
+            }
+            .navbar.navbar-dark.bg-dark.responsive a.icon{
+                position:absolute;
+                left: 10px;
+                top: 10px;
+            }
+            .navbar.navbar-dark.bg-dark.responsive > .container-fluid > .nav.navbar-nav > li > a, .dropdown{
+                display: block;
+                width: 100%;
+                text-align: left;
+                left: 0px;
+            }
+        }
     </style>
 </head>
 
@@ -262,7 +458,130 @@
             </div>
         </div>
     </div>
-    <%- include ('header') %>
+    <nav class="navbar navbar-dark bg-dark" id="topMenu" style="background-color: #FFF;">
+        <div class="navbar navbar-header">
+            <a class="navbar-brand" href="/" style="margin-left: 35%;">
+                <img class="brand-img" src="/assets/logo.jpg" width="90px" height="50px" alt="League store 77">
+            </a>
+        </div>   
+        <div class="container-fluid" style="margin-top: 5px;"> 
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">TRANG CHỦ</a></li>
+                <li>
+                    <a href="/newarrivals">NEW ARRIVAL</a>
+                </li>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" >SẢN PHẨM<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" >TẤT CẢ SẢN PHẨM</a></li>
+                        <li><a href="#" >QUẦN ÁO</a></li>
+                        <li><a href="#" >QUẦN ÁO THỂ THAO</a></li>
+                        <li><a href="#" >PHỤ KIỆN</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">BỘ SƯU TẬP<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" >HÈ</a></li>
+                        <li><a href="#" >THU ĐÔNG</a></li>
+                        <li><a href="#" >PHỤ KIỆN</a></li>
+                    </ul>
+                </li>
+
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">CHÍNH SÁCH - HƯỚNG DẪN<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" >HƯỚNG DẪN CHỌN SIZE</a></li>
+                        <li><a href="#" >HƯỚNG DẪN ĐẶT HÀNG</a></li>
+                        <li><a href="/guide.backitem" >CHÍNH SÁCH ĐỔI TRẢ</a></li>
+                        <li><a href="#" >TÀI KHOẢN NGÂN HÀNG</a></li>
+                    </ul>
+                </li>
+    
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">GIẢI ĐẤU<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" >NGOẠI HẠNG ANH</a></li>
+                        <li><a href="#" >LA LIGA</a></li>
+                        <li><a href="#" >BUNDES LIGA</a></li>
+                        <li><a href="#" >LEAGUE 1</a></li>
+                        <li><a href="#" >SERI A</a></li>
+                        <li><a href="#" >WORLD CUP</a></li>
+                        <li><a href="#" >UEFA CHAMPIONS LEAGUE</a></li>
+                        <li><a href="#" >UEFA EUROPA LEAGUE</a></li>
+                        <li><a href="#" >EURO</a></li>
+                    </ul>
+                </li>
+    
+                <li><a class="contact" href="/contact">GIỚI THIỆU</a></li>
+    
+                <li><a class="news" href="/news">NEWS</a></li>
+    
+                <% if(user !== undefined && user !== "Login") {%>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">QUẢN LÝ<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/admin">Quản lý người dùng</a></li>
+                            <li><a href="/producttable">Quản lý sản phẩm</a></li>
+                            <li><a href="/orders">Quản lý đơn hàng</li>
+                            <li><a href="/summary">Thống kê</a></li>
+                            <li><a href="/campaign">Chiến dịch bán hàng</a></li>
+                            <li><a href="/uploadbanner">Upload banner</a></li>
+                            <li><a href="/upload">Upload product</a></li>
+                            <li><a href="/updatedb">Update database</a></li>
+                        </ul>
+                    </li>   
+                <%}%>
+                <li>
+                    <a href="/signup"><span >ĐĂNG KÝ</span></a>
+                </li>
+            </ul>
+            
+        </div>
+        <ul class="nav navbar-nav navbar-right" style="position: absolute; top:  0; right: 20px;">
+            <% if(user !== undefined && user !== "Login") { %>
+                <li class="dropdown">
+                    <a style="color: black;">
+                        <span class="glyphicon glyphicon-user"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <a style="color: black;">
+                            <%= user %>
+                        </a>
+                        <li>
+                            <a href="/home"><span class="glyphicon glyphicon-log-in" style="color: black;"></span> Logout </a>
+                        </li>
+                    </ul>
+                </li>
+            <% } else {%>
+                <li class="login-item">
+                    <a href="/login" style="color: black; font-weight: 350;">
+                        <span class="glyphicon glyphicon-user">
+                        </span>
+                    </a>
+                </li>
+            <% } %>
+
+            <li class="cart-item">
+                <a href="/carts" style="color: black; font-weight: 350;">
+                    <span class="glyphicon glyphicon-shopping-cart" style="color: black;"><%=products%>
+                    </span>
+                </a>
+            </li>
+
+            <li class="search-item">
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <form style="margin-top: 7.5px;" class="form-inline my-2 my-lg-0">
+                        <h3 style="text-align: center;"> TÌM KIẾM </h3>
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="margin-left: 10px;">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin-top: 5px; margin-left: 10px;"> Tìm kiếm </button>
+                    </form>
+                </div>
+                <li>
+                    <a><span class="glyphicon glyphicon-search" style="color: black;" onclick="openNav()"></span></a>
+                </li>
+            </li>
+        </ul>
+        <a href="javascript:void(0);" class="icon" style="font-size: 25px; margin-left: 10px; color: black;" onclick="responsiveMenu()">
+            <i class="glyphicon glyphicon-menu-hamburger"></i>
+        </a>
+    </nav>
     <%- include ('slideshow') %>
     <br>
     <div class="grid-container-top">
@@ -427,6 +746,22 @@
             return ((index % 3) ? next : (next + ',')) + prev
         });
     }
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "220px";
+    }
+
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+    }
+
+    function responsiveMenu() {
+        var x = document.getElementById("topMenu");
+        if (x.className === "navbar navbar-dark bg-dark") {
+            x.className += " responsive";
+        } else {
+            x.className = "navbar navbar-dark bg-dark";
+        }
+    } 
 </script>
 
 </html>
