--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,13 @@
-<div class="container">
+<!DOCTYPE html>
+<<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>League store 77</title>
+</head>
+<body>
+    <div class="container">
     <h2> LIÊN HỆ VỚI CHÚNG TÔI </h2>
 </div>
 <div class="container">
@@ -57,3 +66,5 @@
     </div>
 </div>
 <p>Địa chỉ: Số 3, ngách 369 Ngõ Quỳnh, Hai Bà Trưng, Hà Nội</p>
+</body>
+</html>
