--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,7 +1,19 @@
-<form action="/reset" method="POST">
-    <div class="container">
-        <h1>Tạo lại mật khẩu mới</h1>
-        <input type="text" name="editEmail"></input>
-        <button type="submit" , class="btn btn-teal btn-rounded btn-sm m-0">Send email</button>
-    </div>
-</form>
+<!DOCTYPE html>
+<<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+</head>
+    <body>
+        <form action="/reset" method="POST">
+            <div class="container">
+                <h1>Tạo lại mật khẩu mới</h1>
+                <input type="text" name="editEmail"></input>
+                <button type="submit" , class="btn btn-teal btn-rounded btn-sm m-0">Send email</button>
+            </div>
+        </form>
+    </body>
+</html>
+
