--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -1,14 +1,22 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!DOCTYPE html>
+<html>
 
-<form action="/changepassword" method="POST">
-    <div>
-        <h1>CHANGE YOUR PASSWORD</h1>
-        Old password: <input type="text" name="oldpassword"></input>
-        </br>
-        New password: <input type="text" name="newpassword"></input>
-        </br>
-        <button type="submit" , class="btn btn-teal btn-rounded btn-sm m-0">Change</button>
-    </div>
-</form>
+<head>
+    <title>League store 77</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
+<body>
+    <form action="/changepassword" method="POST">
+        <div>
+            <h1>CHANGE YOUR PASSWORD</h1>
+            Old password: <input type="text" name="oldpassword"></input>
+            </br>
+            New password: <input type="text" name="newpassword"></input>
+            </br>
+            <button type="submit" , class="btn btn-teal btn-rounded btn-sm m-0">Change</button>
+        </div>
+    </form>
+</body>
+</html> 
