--- a/views/guide-policy/guide.backitem.ejs
+++ b/views/guide-policy/guide.backitem.ejs
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
+    <%- include('header'); %>
     <h1>CHÍNH SÁCH ĐỔI TRẢ VÀ BẢO HÀNH</h1>
   </body>
 </html>
