--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,16 @@
-<section class="vh-100" style="background-color: #eee;">
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>League store 77</title>
+  <style type="text/css">
+    /* local css here */
+  </style>
+</head>
+<body>
+  <section class="vh-100" style="background-color: #eee;">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-lg-12 col-xl-11">
@@ -74,3 +86,5 @@
       </div>
     </div>
   </section>
+</body>
+</html>
