--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,63 +7,63 @@
 </head>
 <body>
     <div class="container">
-    <h2> LIÊN HỆ VỚI CHÚNG TÔI </h2>
-</div>
-<div class="container">
-    <!--three js representation-->
-    <div class="row">
-        <div class="col-sm-3">
-            <div class="card">
-                <a href="sendemail">
-                    <img class="hover-shadow cursor" src="/icon/email.png"  style="border-radius: 10px;" alt="Card image cap">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">EMAIL</h5>
-                    <p class="card-text">Contact with us via Email</p>
+        <h2> LIÊN HỆ VỚI CHÚNG TÔI </h2>
+    </div>
+    <div class="container">
+        <!--three js representation-->
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="card">
+                    <a href="sendemail">
+                        <img class="hover-shadow cursor" src="/icon/email.png"  style="border-radius: 10px;" alt="Card image cap">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">EMAIL</h5>
+                        <p class="card-text">Contact with us via Email</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-sm-3">
-            <div class="card">
-                <a href="">
-                    <img class="hover-shadow cursor" src="/icon/telephone.png" style="border-radius: 10px;" alt="Card image cap">
-                </a>
-                <div class="card-body">
-                    <h5 class="card-title">PHONE</h5>
-                    <p class="card-text">Phone num: (+84) 0862263986</p>
+            <div class="col-sm-3">
+                <div class="card">
+                    <a href="">
+                        <img class="hover-shadow cursor" src="/icon/telephone.png" style="border-radius: 10px;" alt="Card image cap">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">PHONE</h5>
+                        <p class="card-text">Phone num: (+84) 0862263986</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
-        <div class="col-sm-3">
-            <div class="card">
-                <a href="https://www.facebook.com/LeagueStore77">
-                    <img class="hover-shadow cursor" src="/icon/facebook.png" style="border-radius: 10px;" alt="Card image cap">
-                </a>
+            <div class="col-sm-3">
+                <div class="card">
+                    <a href="https://www.facebook.com/LeagueStore77">
+                        <img class="hover-shadow cursor" src="/icon/facebook.png" style="border-radius: 10px;" alt="Card image cap">
+                    </a>
 
-                <div class="card-body">
-                    <h5 class="card-title">FACEBOOK</h5>
-                    <p class="card-text">Contact with us via Facebook</p>
+                    <div class="card-body">
+                        <h5 class="card-title">FACEBOOK</h5>
+                        <p class="card-text">Contact with us via Facebook</p>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-sm-3">
-            <div class="card">
-                <a href="https://www.facebook.com/LeagueStore77">
-                    <img class="hover-shadow cursor" src="/icon/instagram.png" style="border-radius: 10px;" alt="Card image cap">
-                </a>
+            <div class="col-sm-3">
+                <div class="card">
+                    <a href="https://www.facebook.com/LeagueStore77">
+                        <img class="hover-shadow cursor" src="/icon/instagram.png" style="border-radius: 10px;" alt="Card image cap">
+                    </a>
 
-                <div class="card-body">
-                    <h5 class="card-title">INSTAGRAM</h5>
-                    <p class="card-text">Contact with us via Instagram</p>
+                    <div class="card-body">
+                        <h5 class="card-title">INSTAGRAM</h5>
+                        <p class="card-text">Contact with us via Instagram</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<p>Địa chỉ: Số 3, ngách 369 Ngõ Quỳnh, Hai Bà Trưng, Hà Nội</p>
+    <p>Địa chỉ: Số 3, ngách 369 Ngõ Quỳnh, Hai Bà Trưng, Hà Nội</p>
 </body>
 </html>
