--- a/views/header.ejs
+++ b/views/header.ejs
@@ -237,7 +237,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="#" >HƯỚNG DẪN CHỌN SIZE</a></li>
                         <li><a href="#" >HƯỚNG DẪN ĐẶT HÀNG</a></li>
-                        <li><a href="/guide.backitem" >CHÍNH SÁCH ĐỔI TRẢ</a></li>
+                        <li><a href="/guide-backitem" >CHÍNH SÁCH ĐỔI TRẢ</a></li>
                         <li><a href="#" >TÀI KHOẢN NGÂN HÀNG</a></li>
                     </ul>
                 </li>
