--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<<!DOCTYPE html>
-<html>
+
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -225,9 +225,22 @@
                 text-align: center;
                 color: rgb(8, 166, 240);
             }
+            #topbar-down {background: #faf4f4 ;font-size: 14px; color: rgb(221, 207, 207)}
+            #topbar-down p {padding: 4px 0;margin-bottom:0;}
         </style>
-    <head>
+    </head>
     <body>
+        <div id="topbar-down">
+            <div class="container-fluid" style="margin-left: 20px;">
+                <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
+                      <p>
+                        <a href="/">Trang chủ</a> / Đăng nhập
+                      </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <h1>Chào mừng bạn đến với LEAGUE STORE 77</h1>
             <h3>Đăng nhập</h3>
